--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 
 
 body {
+    color: lightgray;
     font-family: 'Oxanium';
     font-size: 1rem;
-    max-width: 62rem;
-    margin-left: 31rem;
+    max-width: 60rem;
+    margin-left: 30em;
     background-size: 100%;
     background-color: #060606;
     padding: 0.6rem;
