--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Oxanium';
     font-size: 1rem;
     max-width: 60rem;
-    margin-left: 30em;
+    margin-left: 30rem;
     background-size: 100%;
     background-color: #060606;
     padding: 0.6rem;
