--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Oxanium';
     font-size: 1rem;
     max-width: 60rem;
-    margin-left: 30rem;
+    margin-left: 33.3%;
     background-color: #060606;
     padding: 0.6rem;
     text-align: center;
@@ -19,11 +19,6 @@ body {
     }
     
 } 
-@media screen and (min-width: 2000px){
-    body {
-        margin-left: 33%;
-    }
-}
 @media screen and (max-width: 800px){
     body {
         min-width: 30rem;
@@ -38,6 +33,15 @@ body {
     .heythere {
         flex-direction: column;
     }
+    .logo {
+        min-width: 50px;
+        max-width: 200px;
+        margin-left: 33.3%;
+    }
+    .credit {
+        margin-right: 50%;
+    }
+    
 }
 a:link {
     color: turquoise;
@@ -56,7 +60,7 @@ a:hover {
 }
 
 a:active {
-    color: yellow;
+    color: indianred;
     text-decoration: underline;
 }
 
@@ -77,11 +81,7 @@ nav {
     justify-content: space-evenly;
 }
 
-.video-container {
-    padding: 0.3rem;
-}
-
-.video-container2 {
+.video-container , .video-container2 {
     padding: 0.3rem;
 }
 
