--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Oxanium';
     font-size: 1rem;
     max-width: 60rem;
-    margin-left: 33.3%;
+    margin-left: 25%;
     background-color: #060606;
     padding: 0.6rem;
     text-align: center;
@@ -18,6 +18,11 @@ body {
         margin-left: 0rem;
     }
     
+}
+@media screen and (min-width: 2560px){
+    body {
+        margin-left: 33.3%;
+    }
 } 
 @media screen and (max-width: 800px){
     body {
