--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     max-width: 60rem;
     margin-left: 25%;
     background-color: #060606;
-    padding: 0.6rem;
+    padding: 1rem;
     text-align: center;
 }
 @media screen and (max-width: 1400px){
@@ -26,7 +26,7 @@ body {
 } 
 @media screen and (max-width: 800px){
     body {
-        min-width: 30rem;
+        min-width: 33rem;
     }
     nav {
         text-align: center;
@@ -66,23 +66,26 @@ a:hover {
 
 a:active {
     color: indianred;
-    text-decoration: underline;
 }
 
 .logo {
     display: flex;
-    justify-content: right;
+    justify-content: center;
+}
+
+.grid {
+    display: grid;
 }
 
 
 nav {
     font-family: 'Oxanium';
     font-size: 1.125rem;
-    padding: 0.6rem;
     text-align: right;
+    padding: 1rem;
 }
 
-.videos {
+.videos, .heythere {
     display: flex;
     justify-content: space-evenly;
 }
@@ -97,12 +100,12 @@ nav {
     font-size: 1rem;
 }
 
-.heythere {
-    display: flex;
-    justify-content: space-evenly;
-}
-
 .credit {
     color: lightgray;
     font-size: 0.85rem;
+}
+
+.tags {
+    color: indianred;
+    font-size: 1.2rem;
 }
